# Raposa-NG

idmind_messages/: CMakeLists.txt  package.xml
raposang_bringup/: CMakeLists.txt  package.xml
raposang_bringup/config/: left_bumblebee_10371575.yaml  right_bumblebee_10371575.yaml
raposang_bringup/launch/: depth_image.launch  full_startup.launch  raposang_bringup.launch  raposang_bumblebee.launch  raposang_herkulex.launch  raposang_imu.launch  raposang_motorsboard.launch  raposang_rosbridge.launch  raposang_rosbridge.launch.save  raposang_rosbridge.launch.save.1  raposang_rs_camera.launch  raposang_sensorsboard.launch  raposang_server.launch  raposang_stereo.launch  raposang_usb_cam.launch  rosbridge_websocket.launch  startup.launch  stereo_image_proc.launch  webserver.launch
raposang_bringup/scripts/: bumblebee.sh  controlrelay.sh  depth.sh  gamepad.sh  herkulex.sh  imu.sh  joynode.sh  joystick.sh  laser.sh  laserstab.sh  motors.sh  odom.sh  rosbridge.sh  sensors.sh  slam.sh  slippage.sh  tf.sh  usbcam.sh
raposang_common/experiment_record/: CMakeLists.txt  CMakeLists.txt.save  package.xml
raposang_common/experiment_record/msg/: RecData.msg
raposang_common/experiment_record/src/: raposang_rosbag_node.py  raposang_rosbag_node_OLD.py
raposang_common/raposang_description/: CMakeLists.txt  package.xml
raposang_common/raposang_description/src/: parser.cpp
raposang_common/raposang_description/urdf/: raposang.gv  raposang.urdf
raposang_common/raposang_tf/: CMakeLists.txt  package.xml
raposang_common/raposang_tf/launch/: imu_transform.launch  raposang_tf.launch
raposang_control/raposang_control_relay/: CMakeLists.txt  package.xml
raposang_control/raposang_joy/: CMakeLists.txt  package.xml
raposang_control/raposang_laser_stabiliser/: CMakeLists.txt  package.xml
raposang_drivers/idmind_herkulex/: CMakeLists.txt  README.md  package.xml
raposang_drivers/idmind_herkulex/cfg/: idmind_herkulex.yaml
raposang_drivers/idmind_herkulex/launch/: herkulex.launch  teleop.launch
raposang_drivers/idmind_herkulex/msg/: LedCommand.msg  MotorCommand.msg  MotorStatus.msg  TorqueCommand.msg
raposang_drivers/idmind_herkulex/src/: herkulex.py  node.py  teleop.py
raposang_drivers/idmind_motorsboard/: README.MD
raposang_drivers/idmind_sensorsboard/: CMakeLists.txt  README.MD
raposang_navigation/: tf
raposang_navigation/map_to_img/: CMakeLists.txt  package.xml
raposang_navigation/raposang_odometry/: CMakeLists.txt  package.xml  setup.py
raposang_navigation/raposang_odometry/doc/: README.md
raposang_navigation/raposang_odometry/launch/: .raposang_odometry.launch.swp  raposang_odometry.launch
raposang_navigation/raposang_odometry/scripts/: raposang_odometry_node
raposang_navigation/raposang_odometry/src/: raposang_odometry_node.cpp
raposang_navigation/raposang_odometry/src/include/: raposang_odometry (ORIGINAL).hpp  raposang_odometry.hpp
raposang_navigation/raposang_slam/: CMakeLists.txt  package.xml
raposang_navigation/raposang_slippage/: CMakeLists.txt  package.xml  setup.py
raposang_navigation/raposang_slippage/ros/launch/: laser_2_pose.launch  raposang_slippage.launch
raposang_navigation/raposang_slippage/ros/src/: classes.py  data_visualization.py  functions.py  position.py  true_vectors.py
raposang_system/: 50-raposang.rules  Fresh_installation_RAPOSA-NG  raposang_init_nodes.bash  record_bag.sh
raposang_system/OLD/: raposang_init_control.bash  raposang_init_hardware.bash  raposang_init_nodes.sh  raposang_roscore.bash  raposang_server.bash
raposang_system/calibration files/: BB2 calibration  Calibration  calibration bb2 First  left.yaml  ost.txt  right.yaml
raposang_system/raposang-nodes/: node-bumblebee.service  node-controlrelay.service  node-depth.service  node-gamepad.service  node-herkulex.service  node-imu.service  node-joynode.service  node-joystick.service  node-laser.service  node-laserstab.service  node-motors.service  node-odom.service  node-rosbridge.service  node-sensors.service  node-slam.service  node-slippage.service  node-tf.service  node-usbcam.service  raposang-nodes.service  roscore-raposang  roscore-raposang.service
(+28 files in other folders)
