<?xml version="1.0"?>
<package format="2">
    <name>idmind_messages</name>
    <version>0.1.0</version>
    <description>The idmind_messages package contains all general messages used in IDMind robots</description>

    <maintainer email="cneves@idmind.pt">Carlos Neves</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>std_msgs</depend>

    <export>
    </export>
</package>
