<?xml version="1.0"?>
<package>
    <name>raposang_odometry</name>
    <version>1.0.0</version>
    <description>
        TODO!
    </description>

    <license>GPLv3</license>

    <author email="rute.luz@tecnico.ulisboa.pt">Rute Luz / Jose Corujeira</author>
    <maintainer email="rute.luz@tecnico.ulisboa.pt">Rute Luz / Jose Corujeira</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>roscpp</build_depend>

    <run_depend>nav_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>roscpp</run_depend>


</package>
